testsuite/codegen/compile-fail/main-bad-return-type.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class Main {
  // CHECK-L: main-bad-return-type.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main(): U64 { 0 }
}
